# multi-agent

./: .env  README.md  main.py  pyproject.toml
app/: .env  agent.py  bot.json  helper.py  tool.py  vectorstore.py
app/config/: __init__.py
app/endpoint/: __init__.py  routes.py
